# breakout

./: Cargo.toml  readme.md
shader/: main.wgsl
src/: main.rs
src/game/: comm_renderer.rs  mod.rs  scene.rs  state.rs
src/game/breakout/: mod.rs  text_renderer.rs
src/game/breakout/entities/: ball.rs  brick.rs  mod.rs  paddle.rs  pointer.rs
src/game/breakout/entities/brick/: brick.rs  mod.rs
src/game/breakout/obj_renderer/: mod.rs  model.rs
src/game/breakout/renderer/: camera.rs
src/game/breakout/state/: mod.rs
src/game/comm_renderer/: mod.rs  renderer_part.rs
src/game/default_2d_renderer/: mod.rs  shape.rs
src/game/default_2d_renderer/shape/: dot.rs  line.rs  mod.rs  standard.wgsl  triangle.rs
src/game/draw_comms/: mod.rs  shape.rs
src/game/entities/: ball.rs  brick.rs  indicator.rs  mod.rs  paddle.rs  pointer.rs
src/game/pause/: mod.rs  renderer.rs
src/game/select/: mod.rs
src/game/state/: mod.rs
src/game/util/: mod.rs
src/game/util/text_renderer/: mod.rs
src/game/util/text_renderer/entry/: body.rs  bound.rs  mod.rs
src/gfx/: mod.rs  model.rs  rendering.rs
src/sfx/: mod.rs
