[package]
name = "breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
strip = "debuginfo"

[profile.dev]
opt-level = 1

[dependencies]
# エラーハンドル
anyhow = "1.0"

# 日時処理
chrono = "0.4"

# ロガー
log = "0.4"

# ロガーの実装
fern = "0.6"

# GUI/IO
winit = "0.27"

# グラフィクス
wgpu = "0.13"

# オーディオ
rodio = "0.15"

# 非同期関数の同期処理プリミティブ
pollster = "0.2"

# バイト列への変換
bytemuck = {version = "1.12", features = ["derive"]}

# 数値演算ライブラリ
nalgebra = "0.31"

# 軽量スレッド同期プリミティブ
parking_lot = "0.12"

# WGPUの文字表示
wgpu_glyph = "0.17"

# ハッシュテーブル
hashbrown = "0.12"